k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitcoinbastion
  labels:
    app.kubernetes.io/name: bitcoinbastion
